# TM1

./: .clang-tidy  .cmake-format.json  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  build_clang.sh  build_dependencies.json  build_gcc.sh  build_vc15.bat  build_vc15_clang.bat  clang_format.cmake  clang_tidy.cmake  default.profraw  encode_all  requirements.txt
.gitlab/: CODEOWNERS
Aggregator/: CMakeLists.txt
Aggregator/src/: Aggregator.cpp  Aggregator.reg.hpp
AtlasConstructor/: CMakeLists.txt
AtlasConstructor/src/: Aggregator.cpp  AtlasConstructor.cpp  AtlasConstructor.main.cpp  AtlasConstructor.reg.hpp  AtlasConstructor.test.cpp  Cluster.cpp  Cluster.h  DepthQualityAssessor.cpp  EntityBasedAtlasConstructor.cpp  HierarchicalPruner.cpp  IAggregator.cpp  IAtlasConstructor.cpp  IPacker.cpp  IPruner.cpp  MaxRectPiP.cpp  MaxRectPiP.h  Packer.cpp  PrunedMesh.cpp  PrunedMesh.h  Pruner.cpp
AtlasDeconstructor/: CMakeLists.txt
AtlasDeconstructor/src/: AtlasDeconstructor.cpp  AtlasDeconstructor.main.cpp  AtlasDeconstructor.reg.hpp  AtlasDeconstructor.test.cpp  IAtlasDeconstructor.cpp
Common/: CMakeLists.txt
Common/src/: Application.cpp  Array.cpp  Bitstream.cpp  Bitstream.test.cpp  Bytestream.cpp  Common.cpp  Common.test.cpp  Factory.cpp  Filter.test.cpp  Frame.cpp  Graph.cpp  Half.cpp  Json.cpp  Json.test.cpp  LinAlg.cpp  Matrix.cpp  Quaternion.test.cpp  Traits.cpp  Transformation.cpp  Vector.cpp
Common/test/: CommonTest.json
Decoder/: CMakeLists.txt
Decoder/src/: AccessUnit.cpp  AccessUnit.test.cpp  AtlasDecoder.cpp  CommonAtlasDecoder.cpp  Decoder.cpp  Decoder.main.cpp  Decoder.reg.hpp  Decoder.test.cpp  DepthScaler.cpp  Encoder.main.cpp  EntityBasedPatchMapFilter.cpp  GeometryScaler.cpp  IDecoder.cpp  IvMetadataReader.cpp  IvMetadataReader.h  MivDecoder.cpp  MivDecoder.test.cpp  NalUnitSemantics.h  OccupancyExtractor.cpp  OccupancyReconstructor.cpp  V3cBitstream.test.cpp  V3cSampleStreamDecoder.cpp  V3cUnitBuffer.cpp  registerComponents.cpp
DepthOccupancy/: CMakeLists.txt
DepthOccupancy/src/: DepthOccupancy.cpp  DepthOccupancy.reg.hpp  DepthOccupancy.test.cpp  ExplicitOccupancy.cpp
DepthQualityAssessor/: CMakeLists.txt
DepthQualityAssessor/src/: DepthQualityAssessor.cpp  DepthQualityAssessor.reg.hpp
Encoder/: CMakeLists.txt
Encoder/src/: AtlasConstructor.cpp  Encoder.cpp  Encoder.main.cpp  Encoder.reg.hpp  Encoder.test.cpp  Encoder_completeAccessUnit.cpp  Encoder_popFrame.cpp  Encoder_prepareAccessUnit.cpp  Encoder_prepareSequence.cpp  Encoder_pushFrame.cpp  GeometryDownscaler.cpp  GroupBasedEncoder.cpp  IEncoder.cpp  IvMetadataWriter.cpp  IvMetadataWriter.h  MivEncoder.cpp  Multiplexer.main.cpp  registerComponents.cpp
GeometryQuantizer/: CMakeLists.txt
GeometryQuantizer/src/: ExplicitOccupancy.cpp  GeometryQuantizer.cpp  GeometryQuantizer.reg.hpp  GeometryQuantizer.test.cpp
IO/: CMakeLists.txt
IO/src/: IO.cpp  IO.test.cpp  IvMetadataReader.cpp  IvMetadataWriter.cpp
Image/: CMakeLists.txt
Image/src/: Image.cpp  Image.test.cpp
Metadata/: CMakeLists.txt
Metadata/src/: AtlasParametersList.cpp  Bitstream.cpp  CameraParameterList.cpp  CameraParametersList.cpp  IvAccessUnitParams.cpp  IvSequenceParams.cpp  Metadata.test.cpp  PatchParameterList.cpp  ViewingSpace.cpp  verify.cpp  verify.h
MivBitstream/: CMakeLists.txt
MivBitstream/src/: AccessUnit.cpp  AccessUnitDelimiterRBSP.cpp  AccessUnitDelimiterRBSP.test.cpp  AdaptationParameterSetRBSP.cpp  AdaptationParameterSetRBSP.test.cpp  AtlasAdaptationParameterSetRBSP.cpp  AtlasAdaptationParameterSetRBSP.test.cpp  AtlasFrameParameterSetRBSP.cpp  AtlasFrameParameterSetRBSP.test.cpp  AtlasObjectAssociation.cpp  AtlasObjectAssociation.test.cpp  AtlasSequenceParameterSetRBSP.cpp  AtlasSequenceParameterSetRBSP.test.cpp  AtlasSubBitstream.cpp  AtlasTileGroupLayerRBSP.cpp  AtlasTileGroupLayerRBSP.test.cpp  AtlasTileLayerRBSP.cpp  AtlasTileLayerRBSP.test.cpp  BitrateReport.h  CommonAtlasFrameMivExtension.cpp  CommonAtlasFrameMivExtension.test.cpp  CommonAtlasFrameRBSP.cpp  CommonAtlasFrameRBSP.test.cpp  CommonAtlasSequenceParameterSetRBSP.cpp  CommonAtlasSequenceParameterSetRBSP.test.cpp  EncoderParams.cpp  EndOfAtlasSubBitstreamRBSP.cpp  EndOfAtlasSubBitstreamRBSP.test.cpp  EndOfSequenceRBSP.cpp  EndOfSequenceRBSP.test.cpp  FrameOrderCountRBSP.cpp  FrameOrderCountRBSP.test.cpp  GeometryUpscalingParameters.cpp  GeometryUpscalingParameters.test.cpp  IvAccessUnitParams.cpp  IvSequenceParams.cpp  Metadata.test.cpp  MivBitstream.spikes.cpp  MivDecoder.cpp  MivDecoder.test.cpp  (+51 more)
Packer/: CMakeLists.txt
Packer/src/: Cluster.cpp  Cluster.h  MaxRectPiP.cpp  MaxRectPiP.h  Packer.cpp  Packer.reg.hpp
Pruner/: CMakeLists.txt
Pruner/src/: HierarchicalPruner.cpp  NoPruner.cpp  PrunedMesh.cpp  Pruner.reg.hpp
Renderer/: CMakeLists.txt
Renderer/src/: AccumulatingPixel.cpp  AccumulatingPixel.h  AccumulatingView.cpp  AccumulatingView.h  AdditiveSynthesizer.cpp  Engine.cpp  Engine.h  Engine.hpp  Engine_ERP.hpp  Engine_Perspective.hpp  GroupBasedRenderer.cpp  IInpainter.cpp  IRenderer.cpp  ISynthesizer.cpp  Inpainter.cpp  MultipassRenderer.cpp  NoSynthesizer.cpp  PushPull.h  PushPull.hpp  PushPull.test.cpp  PushPullInpainter.cpp  PushPullInpainter.test.cpp  Rasterizer.h  Rasterizer.hpp  RecoverPrunedViews.cpp  Renderer.cpp  Renderer.main.cpp  Renderer.reg.hpp  Renderer.test.cpp  SubBlockCuller.cpp  SubBlockCuller.test.cpp  Synthesizer.cpp  ViewWeightingSynthesizer.cpp  ViewingSpaceController.cpp  blend.h  blend.hpp  mapInputToOutputFrames.cpp  quantize_and_expand.cpp  registerComponents.cpp  reprojectPoints.cpp
VideoDecoder/: CMakeLists.txt
VideoDecoder/src/: HmVideoDecoder.cpp  IVideoDecoder.cpp  VideoDecoder.main.cpp  VideoServer.cpp
ViewOptimizer/: CMakeLists.txt
ViewOptimizer/src/: AbstractViewSelector.cpp  BasicViewAllocator.cpp  IViewOptimizer.cpp  ServerSideInpainter.cpp  ServerSideInpainter.test.cpp  ViewOptimizer.main.cpp  ViewOptimizer.reg.hpp  ViewOptimizer.test.cpp  ViewReducer.cpp
ViewingSpace/: CMakeLists.txt
VpccBitstream/: CMakeLists.txt
(+8322 files in other folders)
